Fixed img stretching in Safari

--- a/src/components/Documentation/Sections.css
+++ b/src/components/Documentation/Sections.css
@@ -63,6 +63,7 @@
 .doc-styles .highlight .hl-img-container {
     display: flex;
     justify-content: center;
+    align-items: center;
     padding: 1.1rem 0;
 }
 
